buggfix fixing carousel img sizes, fixing contrast errors home/footer

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -31,6 +31,9 @@ body {
 .font-size-text {
   font-size: 1.6rem;
 }
+.font-size-text-md {
+  font-size: 1.2rem;
+}
 html {
   height: 100%;
 }
@@ -275,13 +278,6 @@ color: #17a2b8; /* text-info */
 
 }
 
-.card-carousel {
-  height: 500px; /* Set a fixed height for the cards */
-  display: flex;
-  flex-direction: column;
-  overflow: hidden; /* Prevents content from overflowing */
-}
-
 .card-img-top-carousel {
   width: 100%;
   height: 300px; /* Fixed height for images */
@@ -351,7 +347,7 @@ color: #17a2b8; /* text-info */
 #mc_embed_signup {
   background: #a8742f;
   clear: left;
-  font: 14px Helvetica, Arial, sans-serif;
+  font: 14px 'Eczar', serif;
   width: 320px;
 }
 /* -------------------------------- Media Queries */
@@ -364,6 +360,11 @@ color: #17a2b8; /* text-info */
       max-height: 425px;
       margin: 0 auto;
   }
+  .card-img-top-carousel {
+    object-fit: cover;
+    min-height: 300px;
+    max-height: 300px;
+  }
 }
 
 /* Styles for desktop screens */
@@ -373,6 +374,11 @@ color: #17a2b8; /* text-info */
       min-height: 800px;
       max-height: 800px;
       margin: 0 auto;
+  }
+  .card-img-top-carousel {
+    object-fit: cover;
+    min-height: 600px;
+    max-height: 600px;
   }
 }
 @media (min-width: 1440px) {
